--- a/urls/predavanja.html
+++ b/urls/predavanja.html
@@ -27,21 +27,34 @@
 			table-layout: center;
 			background-color: rgba(20, 20, 20, 0.6);
 		}
+		.nav_list{
+			margin: auto;
+			position: absolute;
+			top: 78.7%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			margin-top: 20px;
+			width: 50%;
+			border: 3px solid transparent;
+			border-image: linear-gradient(45deg, #ff0, #f0f, #f00, #00f, #0f0);
+			border-image-slice: 1;
+			box-shadow: 0 15px 25px rgba(0,0,0,.2);
+			padding: 10px;
+			text-align: center;
+			background-color: rgba(20, 20, 20, 0.6);
+		}
 		a {
 			color: #00F7FF;
 		}
 		a:hover{
 			color: lime;
 		}
-		p {
+		p, h2 {
 			margin: 0%;
 		}
 		h1 {
 			margin: 0%;
 			color: gold;
-		}
-		h2 {
-			margin: 0%;
 		}
 		table, th, td {
 			border: 1px solid white;
@@ -56,7 +69,7 @@
 		table {
 			position: relative;
 			left: 50%;
-			transform: translate(-50%); 
+			transform: translate(-50%);
 		}
 	</style>
 </head>
@@ -68,18 +81,37 @@
 				<th>Osvrti</th>
 			</tr>
 			<tr>
-				<td><a href="../urls/video.html">Predavanje 1</a></td>
-				<td><a href="../files/David_Hrzenjak_projektni_zadatak1.pdf">Osvrt 1</a></td>
+				<td><a href="https://www.youtube.com/watch?v=54T4aNqUvm0">Važnost IKT u metodici nastave na grafičkom fakultetu</a></td>
+				<td><a href="../files/Osvrt-Vaznost_IKT.pdf">Osvrt 1</a></td>
 			</tr>
 			<tr>
-				<td><a href="../urls/video.html">Predavanje 2</a></td>
-				<td><a href="../files/David_Hrzenjak_projektni_zadatak1.pdf">Osvrt 2</a></td>
+				<td><a href="https://www.youtube.com/watch?v=buXRYW3zZvo">Dimenzija piksela, dimenzija slike i resempliranje</a></td>
+				<td><a href="../files/Osvrt-Pikseli.pdf">Osvrt 2</a></td>
 			</tr>
 			<tr>
-				<td><a href="../urls/video.html">Predavanje 3</a></td>
-				<td><a href="../files/David_Hrzenjak_projektni_zadatak1.pdf">Osvrt 3</a></td>
+				<td><a href="https://www.youtube.com/watch?v=X5rrleDM8ew&feature=youtu.be">Kodiranje sivoće piksela</a></td>
+				<td><a href="../files/Osvrt-Kodiranje_sivoce_piksela.pdf">Osvrt 3</a></td>
+			</tr>
+			<tr>
+				<td><a href="https://www.youtube.com/watch?v=hOkXpKW0GC4&feature=youtu.be">Logički operatori nad slikama</a></td>
+				<td><a href="../files/Osvrt-Logicki_operatori_nad_slikama.pdf">Osvrt 4</a></td>
+			</tr>
+			<tr>
+				<td><a href="https://www.youtube.com/watch?v=gWVvLBvEklU&feature=youtu.be">Digitalni video</a></td>
+				<td><a href="../files/Osvrt-Digitalni_video.pdf">Osvrt 5</a></td>
+			</tr>
+			<tr>
+				<td><a href="https://www.youtube.com/watch?v=M4H5GzBeNHo&feature=youtu.be">Logička organizacija web sjedišta</a></td>
+				<td><a href="../files/Osvrt-Logicka_organizacija_web_sjedista.pdf">Osvrt 6</a></td>
 			</tr>
 		</table>
+	</div>
+	<div class="nav_list">
+		<nav>
+			<a href="../index.html">Početna</a> |
+			<a href="../urls/vjezbe.html">Vježbe</a> |
+			<a href="../urls/video.html">Video</a>
+		</nav>
 	</div>
 </body>
 </html>
