--- a/urls/video.html
+++ b/urls/video.html
@@ -30,7 +30,23 @@
 			table-layout: center;
 			background-color: rgba(20, 20, 20, 0.6);
 		}
-		p {
+		.nav_list{
+			margin: auto;
+			position: absolute;
+			top: 81.7%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			margin-top: 20px;
+			width: 50%;
+			border: 3px solid transparent;
+			border-image: linear-gradient(45deg, #ff0, #f0f, #f00, #00f, #0f0);
+			border-image-slice: 1;
+			box-shadow: 0 15px 25px rgba(0,0,0,.2);
+			padding: 10px;
+			text-align: center;
+			background-color: rgba(20, 20, 20, 0.6);
+		}
+		p, h2 {
 			margin: 0%;
 			padding-bottom: 5px;
 		}
@@ -38,12 +54,15 @@
 			margin: 0%;
 			color: gold;
 		}
-		h2 {
-			margin: 0%;
-		}
 		video {
 			width: 100%;
 			height: 100%;
+		}
+		a {
+			color: #00F7FF;
+		}
+		a:hover{
+			color: lime;
 		}
 	</style>
 </head>
@@ -51,9 +70,16 @@
 	<div class="video">
 		<p>Video projekt</p>
 		<video controls>
-			<source src="../videos/video2.mp4" type="video/mp4">
+			<source src="../videos/Video_za_kolokvij_3.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 		</video>
+	</div>
+	<div class="nav_list">
+		<nav>
+			<a href="../index.html">Početna</a> |
+			<a href="../urls/predavanja.html">Predavanja</a> |
+			<a href="../urls/vjezbe.html">Vježbe</a>
+		</nav>
 	</div>
 </body>
 </html>
