--- a/urls/vjezbe.html
+++ b/urls/vjezbe.html
@@ -53,54 +53,139 @@
 			padding-top: 5px;
 			background-color: rgba(20, 20, 20, 0.6);
 		}
+		.podnaslovi{
+			margin: auto;
+			margin-top: 20px;
+			width: 50%;
+			border: 3px solid gold;
+			padding-bottom: 0px;
+			padding-right: 5px;
+			padding-left: 5px;
+			padding-top: 5px;
+			background-color: rgba(20, 20, 20, 0.6);
+			text-align: center;
+		}
 		a {
 			color: #00F7FF;
 		}
-		img {
+		a:hover{
+			color: lime;
+		}
+		img, video {
 			width: 100%;
 			height: 100%;
 		}
-		video {
-			width: 100%;
-			height: 100%;
-		}
-		p {
+		p, h2, h3 {
 			margin: 0%;
 			margin-bottom: 5px;
 		}
-		h3 {
-			margin: 0%;
-			margin-bottom: 5px;
+		#vj3, #vj3_1, #vj4, #kol1, #vj5, #vj5_1 {
+			width: 50%;
+			margin-left: 25%;
+			margin-right: 25%;
+		}
+		#nav_list {
+			text-align: center;
+			padding-bottom: 5px;
 		}
 	</style>
 </head>
 <body>
-	<div class="slike">
-		<h3>Vježba 1</h3>
-		<img src="../pictures/slika.jpg" alt="slika.jpg" />
-		<p>Paragraf/opis vježbe 1.</p>
-	</div>	
+	<div id="nav_list" class="slike">
+		<nav>
+			<a href="../index.html">Početna</a> |
+			<a href="../urls/predavanja.html">Predavanja</a> |
+			<a href="../urls/video.html">Video</a>
+		</nav>
+	</div>
+	<div class="podnaslovi">
+		<h2>Vektorska grafika</h2>
+	</div>
 	<div class="slike">
 		<h3>Vježba 2</h3>
-		<img src="../pictures/colorado.jpg" alt="colorado.jpg" />
-		<p>Paragraf/opis vježbe 2.</p>
-	</div>
+		<img src="../pictures/Vjezba_2.png" alt="Vjezba_2.png" />
+		<p>Primjena Bezierovih krivulja u vektorskoj grafici.</p>
+	</div>	
 	<div class="slike">
 		<h3>Vježba 3</h3>
-		<img src="../pictures/banff.jpg" alt="banff.jpg" />
-		<p>Paragraf/opis vježbe 3.</p>
+		<img id="vj3" src="../pictures/Vjezba_3.png" alt="Vjezba_3.png" />
+		<p>Definiranje boja. Transparencija. Rad sa slojevima i grupiranje objekata.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 3: samostalni rad</h3>
+		<img id="vj3_1" src="../pictures/Vjezba_3.1.png" alt="Vjezba_3.1.png" />
+		<p>Definiranje boja. Transparencija. Rad sa slojevima i grupiranje objekata.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 4</h3>
+		<img id="vj4" src="../pictures/Vjezba_4.png" alt="Vjezba_4.png" />
+		<p>Složeni objekti. Linearni, radijalni i mesh gradijenti.</p>
 	</div>
 	<div class="slika_zadnja">
-		<h3>Vježba 4</h3>
-		<img src="../pictures/ocean.jpg" alt="ocean.jpg" />
-		<p>Paragraf/opis vježbe 4.</p>
+		<h3>Kolokvij 1</h3>
+		<img id="kol1" src="../pictures/Kolokvij_1.png" alt="Kolokvij_1.png" />
+		<p>Samostalan projekt koji objedinjuje sve obrađene metode vektorske grafike.</p>
 	</div>
-	<!--<div class="video">
-		<p>Video s vježbi</p>
+
+	<div class="podnaslovi">
+		<h2>Piksel grafika</h2>
+	</div>
+	<div class="slike">
+		<h3>Vježba 5: slika 1</h3>
+		<img id="vj5" src="../pictures/Vjezba_5.jpg" alt="Vjezba_5.jpg" />
+		<p>Tehnike retuširanja i uklanjanja grešaka s realističnim izgledom.</p>
+	</div>	
+	<div class="slike">
+		<h3>Vježba 5: slika 2</h3>
+		<img id="vj5_1" src="../pictures/Vjezba_5.1.jpg" alt="Vjezba_5.1.jpg" />
+		<p>Tehnike retuširanja i uklanjanja grešaka s realističnim izgledom.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 6</h3>
+		<img src="../pictures/Vjezba_6.jpg" alt="Vjezba_6.jpg" />
+		<p>Tehnike koloriranja crno-bijelih fotografija po kanalima.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 7</h3>
+		<img src="../pictures/Vjezba_7.jpg" alt="Vjezba_7.jpg" />
+		<p>Izrada realistčne fotomontaže koristeći selekcije, maske i korekcije boja.</p>
+	</div>
+	<div class="slika_zadnja">
+		<h3>Kolokvij 2</h3>
+		<img src="../pictures/Kolokvij_2.jpg" alt="Kolokvij_2.jpg" />
+		<p>Samostalan projekt koji objedinjuje sve obrađene metode piksel grafike.</p>
+	</div>
+
+	<div class="podnaslovi">
+		<h2>Video i web</h2>
+	</div>
+	<div class="slike">
+		<h3>Vježba 8</h3>
+		<img src="../pictures/Vjezba_8.gif" alt="Vjezba_8.gif" />
+		<p>Kinemagraf.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 9</h3>
 		<video controls>
-			<source src="../videos/video2.mp4" type="video/mp4">
+			<source src="../videos/Vjezba_9.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 		</video>
-	</div>-->
+		<p>Obrada videa, zvuka i teksta.</p>
+	</div>
+	<div class="slike">
+		<h3>Vježba 9: samostalni rad</h3>
+		<video controls>
+			<source src="../videos/Vjezba_9.1.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+		</video>
+		<p>Obrada videa, zvuka i teksta.</p>
+	</div>
+	<div id="nav_list" class="slika_zadnja">
+		<nav>
+			<a href="../index.html">Početna</a> |
+			<a href="../urls/predavanja.html">Predavanja</a> |
+			<a href="../urls/video.html">Video</a>
+		</nav>
+	</div>
 </body>
 </html>
